--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.gitignore
+login.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +130,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+login.json
+.gitignore
